--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -10,11 +10,5 @@ RUN make install
 WORKDIR /repo/src/fuzz
 RUN make -j8
 
-RUN mkdir -p /deps
-RUN ldd /repo/src/fuzz/cmd | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
-
 FROM ubuntu:20.04 as package
-
-COPY --from=builder /deps /deps
-COPY --from=builder /repo/src/fuzz/cmd /repo/src/fuzz/cmd
-ENV LD_LIBRARY_PATH=/deps
+COPY --from=builder /repo/src/fuzz/cmd /
